--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@ nav: home
 <div class="span10 content">
    <img src="img/profil_small.jpg" alt="profile picture" id="profilePic" class="img-polaroid"/>
    <h2>Hi !</h2>
-   <p>I'm Jonàs Bru, currently a student in my <b>5<sup>th</sup> year</b> at <a href="http://www.insa-lyon.fr/en"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a> (France) in <b>computer science</b>. I have just returned from an Erasmus exchange program at <a href="http://www.chalmers.se/en/">Chalmers University</a> (Göteborg, Sweden), that lasted a semester.</p>
-   <p>I am currently doing an internship in an awesome company, <a href="http://www.atlassian.com/">Atlassian</a>, in Amsterdam.</p>
+   <p>I'm Jonàs Bru, a <b>fresh graduate</b> from <a href="http://www.insa-lyon.fr/en"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a> (France) in <b>computer science</b>. I'm a pragmatic programmer <b>looking for a challenge in an open company with real values</b>. I belive that one must not look for the right job, but for the right place to work.</p>
+   <p>I'm quite a traveler guy, last year I did an Erasmus semester at <a href="http://www.chalmers.se/en/">Chalmers University</a> (Göteborg, Sweden), then an awesome internship at <a href="http://www.atlassian.com/">Atlassian</a>, in Amsterdam, where I learned a bunch of stuff not teached in schools.</p>
+   <p>Feel free to <a href="/contact.html">contact me</a> :)</p>
    <br/>
    <table class="row-fluid">
       <tr>
