--- a/contact.html
+++ b/contact.html
@@ -5,5 +5,5 @@ nav: contact
 ---
 <div class="span10 content mailSpan">
     <h2>Contact</h2>
-    <p><i class="icon-envelope"></i> Email me at : <b>jonas.bru.monserrat[at]gmail[dot]com</b></p>
+    <p><i class="icon-envelope"></i> Email me at : <b><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#111;&#110;&#97;&#115;&#46;&#98;&#114;&#117;&#46;&#109;&#111;&#110;&#115;&#101;&#114;&#114;&#97;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#106;&#111;&#110;&#97;&#115;&#46;&#98;&#114;&#117;&#46;&#109;&#111;&#110;&#115;&#101;&#114;&#114;&#97;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></b></p>
 </div>
