--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ nav: home
 <div class="span10 content">
    <img src="img/profil_small.jpg" alt="profile picture" id="profilePic" class="img-polaroid"/>
    <h2>Hi !</h2>
-   <p>I'm Jonàs Bru, a <b>fresh graduate</b> from <a href="http://www.insa-lyon.fr/en"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a> (France) in <b>computer science</b>. I'm a pragmatic programmer <b>looking for a challenge in an open company with real values</b>. I belive that one must not look for the right job, but for the right place to work.</p>
+   <p>I'm Jonas Bru, a <b>fresh graduate</b> from <a href="http://www.insa-lyon.fr/en"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a> (France) in <b>computer science</b>. I'm a pragmatic programmer <b>looking for a challenge in an open company with real values</b>. I belive that one must not look for the right job, but for the right place to work.</p>
    <p>I'm quite a traveler guy, last year I did an Erasmus semester at <a href="http://www.chalmers.se/en/">Chalmers University</a> (Göteborg, Sweden), then an awesome internship at <a href="http://www.atlassian.com/">Atlassian</a>, in Amsterdam, where I learned a bunch of stuff not teached in schools.</p>
    <p>Feel free to <a href="/contact.html">contact me</a> :)</p>
    <br/>
@@ -46,6 +46,7 @@ nav: home
    </table>
    <div class="span12 ">
       <h4>News</h4>
+      <p><strong>6 October 2013</strong> - The few icons are now rendered using <a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a>.</p>
       <p><strong>1 September 2013</strong> - Description of my awesome internship at <a href="https://www.atlassian.com/">Atlassian</a> added!</p>
       <p><strong>31 August 2013</strong> - The site uses now <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> to render its content.</p>
       <p><strong>25 April 2013</strong> - Added this news section and a link to my bitbucket profile.</p>
