changed font title

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ nav: home
                </a>
             </div>
             <div class="span6 content">
-               <h4 class="center">stuff I like <small> or I would like to do</small></h4>
+               <h4 class="center">stuff I like <small> or would like to do</small></h4>
                <ul>
                   <li><strong>Traveling</strong>; mostly by train, discover new ways of thinking..</li>
                   <li><strong>Good music</strong>; in the bus, while working, etc ! <a href="http://www.lastfm.fr/user/FougereJo">My LastFM profile</a></li>
