Tiny Library Manager added :)

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ nav: home
    </table>
    <div class="span12 ">
       <h4>News</h4>
+      <p><strong>11 October 2013</strong> - <a href="/projects.html#LibraryManager">Tiny Library Manager</a> project that I did in  Atlassian added !</p>
       <p><strong>6 October 2013</strong> - The few icons are now rendered using <a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a>.</p>
       <p><strong>1 September 2013</strong> - Description of my awesome internship at <a href="https://www.atlassian.com/">Atlassian</a> added!</p>
       <p><strong>31 August 2013</strong> - The site uses now <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> to render its content.</p>
