updated Home&CV. Work at AlephD

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ nav: home
 ---
 <div class="span10 content">
    <img src="img/profil_small.jpg" alt="profile picture" id="profilePic" class="img-polaroid"/>
-   <h2>Hi !</h2>
-   <p>I'm Jonas Bru, a <b>fresh graduate</b> from <a href="http://www.insa-lyon.fr/en"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a> (France) in <b>computer science</b>. I'm a pragmatic programmer <b>looking for a challenge in an open company with real values</b>. I belive that one must not look for the right job, but for the right place to work.</p>
-   <p>I'm quite a traveler guy, last year I did an Erasmus semester at <a href="http://www.chalmers.se/en/">Chalmers University</a> (Göteborg, Sweden), then an awesome internship at <a href="http://www.atlassian.com/">Atlassian</a>, in Amsterdam, where I learned a bunch of stuff not teached in schools.</p>
+   <h2>Hi!</h2>
+   <p>I'm Jonas Bru, a <b>software engineer</b>, currently working at <a href="http://alephd.com" target="_blank">AlephD</a> as a full stack developer. Not so long ago I was studying at <a href="http://www.insa-lyon.fr/en" target="_blank"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a>, France. My friends tell me that I'm a <b>pragmatic programmer</b>. I belive that one must not look for the right job, but for the <b>right place to work</b>.</p>
+   <p>I'm quite a traveler guy, last year I did an Erasmus semester at <a href="http://www.chalmers.se/en/" target="_blank">Chalmers University</a> (Göteborg, Sweden), then an awesome internship at <a href="http://www.atlassian.com/" target="_blank">Atlassian</a>, in Amsterdam.</p>
    <p>Feel free to <a href="/contact.html">contact me</a> :)</p>
    <br/>
    <table class="row-fluid">
@@ -17,28 +17,28 @@ nav: home
                <h4>stuff I'm good at</h4>
                <div>
                   <span class="badge badge5">Java</span> <span class="badge badge5">Spring Batch</span> <span class="badge badge5">C#</span> <span class="badge badge4">Android</span> <br/> 
-                  <span class="badge badge4">Python</span> <span class="badge badge5">C++</span> <span class="badge badge5">Qt</span> <br/>
-                  <span class="badge badge4">Javascript</span> <span class="badge badge5">Bootstrap</span> <span class="badge badge3">Backbone</span> <br/>
+                  <span class="badge badge5">Python</span> <span class="badge badge4">Django</span> <span class="badge badge5">C++</span> <span class="badge badge5">Qt</span> <br/>
+                  <span class="badge badge4">Javascript</span> <span class="badge badge5">Bootstrap</span> <span class="badge badge5">jQuery</span> <br/>
                   <span class="badge badge4">Haskell</span> <span class="badge badge3">Erlang</span> <br/>
-                  <span class="badge badge5">UML</span> <span class="badge badge5">Agile methodology</span> <span class="badge badge5">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
+                  <span class="badge badge5">Agile</span> <span class="badge badge5">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
                </div>
                <br/>
                <a href="cv.html" class="a_no_style">
-                  <p style="text-align: center;">Take a look to the CV page for more !</p>
+                  <p style="text-align: center;">Take a look to the CV page for more!</p>
                </a>
             </div>
             <div class="span6 content">
-               <h4 class="center">stuff I like <small> or would like to do</small></h4>
+               <h4 class="center">stuff I like</h4>
                <ul>
                   <li><strong>Traveling</strong>; mostly by train, discover new ways of thinking..</li>
-                  <li><strong>Good music</strong>; in the bus, while working, etc ! <a href="http://www.lastfm.fr/user/FougereJo">My LastFM profile</a></li>
+                  <li><strong>Good music</strong>; in the bus, while working, etc! <a href="http://www.lastfm.fr/user/FougereJo" target="_blank">My LastFM profile</a></li>
                   <li><strong>Human contact</strong>; Well, I'm not talking about that kind of contact.. more like community involvement :)</li>
                   <li><strong>Serrano ham</strong>; I want to be buried with a box of serrano ham</li>
-                  <li><strong>Skydiving</strong>; Never tried, but that must be awesome</li>
+                  <li><strong>Photography</strong>; take a look at my <a href="https://www.flickr.com/photos/fougerejo/" target="_blank">Flickr</a>!</li>
                   <li style="display:none"><strong>Details</strong> and hidden things ;)</li>
                </ul>
                <a href="projects.html" class="a_no_style">
-                  <p style="text-align: center;">Take a look to the Projects page to know what kind of stuff I do !</p>
+                  <p style="text-align: center;">Take a look to the Projects page to know what kind of stuff I do!</p>
                </a>
             </div>
          </td>
@@ -46,7 +46,8 @@ nav: home
    </table>
    <div class="span12 ">
       <h4>News</h4>
-      <p><strong>11 October 2013</strong> - <a href="/projects.html#LibraryManager">Tiny Library Manager</a> project that I did in  Atlassian added !</p>
+      <p><strong>8 April 2014</strong> - Intro and CV updated. I work at <a href="http://alephd.com" target="_blank">AlephD</a> now :)</p>
+      <p><strong>11 October 2013</strong> - <a href="/projects.html#LibraryManager">Tiny Library Manager</a> project that I did in  Atlassian added!</p>
       <p><strong>6 October 2013</strong> - The few icons are now rendered using <a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a>.</p>
       <p><strong>1 September 2013</strong> - Description of my awesome internship at <a href="https://www.atlassian.com/">Atlassian</a> added!</p>
       <p><strong>31 August 2013</strong> - The site uses now <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> to render its content.</p>
