--- a/projects.html
+++ b/projects.html
@@ -8,12 +8,17 @@ projectsMenu: true
 	<h2>Projects</h2>
 	<p>Here are some interesting projects I've participated in these last few years. I tried, wherever possible, to put a link to the code as well as some screenshots (you can click on the images). If you want to know more about a project, please feel free to send me an email!</p>
 	<br/>
-	<div id="LibraryManager" class="span12 backRound">
+	<div id="LibraryManager" class="span12 backRound project">
 		<h2 class="h2Projects">Tiny Library Manager</h2><span class="badge">Python</span><span class="badge">Flask</span><span class="badge">Bootstrap</span><span class="badge">jQuery</span><span class="badge">Google Books API</span>
 		<div class="highslide-gallery">
 			<a id="thumb9" href="img/projects/library1.jpg" class="highslide" 
 					onclick="return hs.expand(this, config9 )">
-				<img src="img/projects/library.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<figure class="stack stack-randomrot">
+						<img src="img/projects/library.thumb.jpg" class="img-polaroid img-project" alt=""/>
+						<img src="img/projects/library.thumb.jpg" class="img-polaroid img-project" alt=""/>
+						<img src="img/projects/library.thumb.jpg" class="img-polaroid img-project" alt=""/>
+						<img src="img/projects/library.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					</figure>
 			</a>
 			
 			<div class="hidden-container">
@@ -42,12 +47,17 @@ projectsMenu: true
 		<p>You can test and play with it at this address : <a href="http://amslibrary.herokuapp.com" target="_blank">http://amslibrary.herokuapp.com</a>. Please mess as much as you want with it, the database is reseted once a day! Don't hesitate to login, it's only a username.</p>
 		<p>The sources are available <a href="https://github.com/jonasbru/TinyLibraryManager" target="_blank">here</a>.</p>
 	</div>
-	<div id="ZenInstants" class="span12 backRound">
+	<div id="ZenInstants" class="span12 backRound project">
 		<h2 class="h2Projects">Zen Instants</h2><span class="badge">Android</span><span class="badge">Java</span><span class="badge">PHP</span>
 		<div class="highslide-gallery">
 			<a id="thumb1" href="img/projects/zenInstants0.jpg" class="highslide" 
 					onclick="return hs.expand(this, config1 )">
-				<img src="img/projects/zenInstants.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				<figure class="stack stack-randomrot">
+					<img src="img/projects/zenInstants.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/zenInstants.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/zenInstants.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/zenInstants.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				</figure>
 			</a>
 			
 			<div class="hidden-container">
@@ -70,12 +80,17 @@ projectsMenu: true
 		<p>Zen instants is an Android app that, randomly during the day, displays a message to the user reminding him to take a break, and to breathe a little. The messages contain a phrase or a short text, and can be accompanied with an image, video or audio file. The purpose of those messages is to force the user to take the break, by reading some text, listening to some audio or watching a short video.</p>
 		<p>Developped with Michael Fagno &amp; Manel Brull. Soon available in Google Play!</p>
 	</div>
-	<div id="Bubbles" class="span12 backRound">
+	<div id="Bubbles" class="span12 backRound project">
 		<h2 class="h2Projects">Bubbles</h2><span class="badge">C++</span><span class="badge">Qt</span><span class="badge">Physics engine</span><span class="badge">3D</span><span class="badge">Network</span>
 		<div class="highslide-gallery">
 			<a id="thumb2" href="img/projects/bubbles1.jpg" class="highslide" 
 					onclick="return hs.expand(this, config2 )">
-				<img src="img/projects/bubbles.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				<figure class="stack stack-randomrot">
+					<img src="img/projects/bubbles.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/bubbles.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/bubbles.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/bubbles.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				</figure>
 			</a>
 			
 			<div class="hidden-container">
@@ -94,7 +109,7 @@ projectsMenu: true
 		<p>The client only displays the current positions of all objects, and it's the server that calculates the positions, movements, collisions, etc..and sends the coordinates of the changed objects to the clients. I developed my own physics engine, because the calculations and the objects were fairly simple.</p>
 		<p>Developped with Mathieu Sabourin &amp; Michael Fagno. Code of the server <a target="_blank" href="https://github.com/bubbles3D/Bubbles-Server">here</a>, and <a target="_blank" href="https://github.com/bubbles3D/Bubble-Client">here</a> for the client.</p>
 	</div>
-	<div id="Kimiya" class="span12 backRound">
+	<div id="Kimiya" class="span12 backRound project">
 		<h2 class="h2Projects">Kimiya 2D Engine</h2><span class="badge">C++</span><span class="badge">OpenGL</span><span class="badge">Qt</span>
 		<p>2D graphic engine in C + +, oriented for games with a 3D isometric view. First phase of a larger game, which for the moment is on stand-by.</p>
 		<p>The creation of this graphics engine is a response to the lack of 2D graphics engines in C++ that was adapted to our needs (we're talking about 2009, I suppose that now there is some good stuff..).</p>
@@ -105,12 +120,17 @@ projectsMenu: true
 		<h2 class="h2Projects">Order Management</h2>
 		<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas facilisis commodo ipsum, nec tempor nibh sagittis vel. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed feugiat, lacus eget suscipit vestibulum, nisi sapien lacinia turpis, id condimentum ipsum massa in nulla. Maecenas ut lorem vel lorem varius semper. Integer est nisi, suscipit et pharetra in, mollis varius tellus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam eget lorem purus, at vulputate ipsum. Vestibulum quis sollicitudin eros. Nulla vel porttitor erat. Nunc porttitor purus malesuada nunc accumsan vehicula.</p>
 	</div> -->
-	<div id="ColonsdeCatane" class="span12 backRound">
+	<div id="ColonsdeCatane" class="span12 backRound project">
 		<h2 class="h2Projects">Colons de Catane</h2><span class="badge">Java</span>
 		<div class="highslide-gallery">
 			<a id="thumb3" href="img/projects/colons1.jpg" class="highslide" 
 					onclick="return hs.expand(this, config3 )">
-				<img src="img/projects/colons.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				<figure class="stack stack-randomrot">
+					<img src="img/projects/colons.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/colons.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/colons.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/colons.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				</figure>
 			</a>
 			
 			<div class="hidden-container">
@@ -129,12 +149,17 @@ projectsMenu: true
 		<p>All the basic rules of the game were implemented, and represented an interesting project by the magnitude of the project and the short time (and staff) at our disposal.</p>
 		<p>Developped with Lionel Cabasson</p>
 	</div>
-	<div id="Paristaxiflow" class="span12 backRound">
+	<div id="Paristaxiflow" class="span12 backRound project">
 		<h2 class="h2Projects">Paris taxi flow</h2><span class="badge">Flash</span><span class="badge">ActionScript 3</span>
 		<div class="highslide-gallery">
 			<a id="thumb4" href="img/projects/taxi1.jpg" class="highslide" 
 					onclick="return hs.expand(this, config4 )">
-				<img src="img/projects/taxi.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				<figure class="stack stack-randomrot">
+					<img src="img/projects/taxi.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/taxi.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/taxi.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/taxi.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				</figure>
 			</a>
 			
 			<div class="hidden-container">
@@ -157,12 +182,17 @@ projectsMenu: true
 		<p>The program was developed in Flash (requirement of the professor), and shows the movements of the taxis during the day over a map of Paris. Different views modes, filters, as well as the ability to track a taxi in particular have also been implemented. The project was interesting by the type of data handled, as well as its volume, that should be well managed in order to not slow the application.</p>
 		<p>Code <a target="_blank" href="https://github.com/jonasbru/TaxiManager">here</a>, try it <a target="_blank" href="http://jonasbru.github.com/TaxiManager/">here</a>!</p>
 	</div>
-	<div id="Gameoflife" class="span12 backRound">
+	<div id="Gameoflife" class="span12 backRound project">
 		<h2 class="h2Projects">Game of life</h2><span class="badge">Haskell</span>
 		<div class="highslide-gallery">
 			<a id="thumb6" href="img/projects/GOL1.gif" class="highslide" 
 					onclick="return hs.expand(this, config6 )">
-				<img src="img/projects/GOL.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				<figure class="stack stack-randomrot">
+					<img src="img/projects/GOL.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/GOL.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/GOL.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/GOL.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				</figure>
 			</a>
 			
 			<div class="hidden-container">
@@ -185,12 +215,17 @@ projectsMenu: true
 		<p>An user interface permits to see the evolution of the pattern (zoom/dezoom, change the simulation speed, etc). The script can read and load RLE files, RLE being the most common game of life patterns files. You can fin a lot of interesting patterns (and spend a lot of time playing with them) on the <a target="_blank" href="http://www.conwaylife.com/wiki/Main_Page">LifeWiki</a>.</p>
 		<p>Developped with Michael Fagno. Code <a target="_blank" href="https://github.com/jonasbru/FunctionalProg">here</a>.</p>
 	</div>
-	<div id="Ascension" class="span12 backRound">
+	<div id="Ascension" class="span12 backRound project">
 		<h2 class="h2Projects">Ascension</h2><span class="badge">Java</span><span class="badge">Slick</span>
 		<div class="highslide-gallery">
 			<a id="thumb5" href="img/projects/ascension1.jpg" class="highslide" 
 					onclick="return hs.expand(this, config5 )">
-				<img src="img/projects/ascension.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				<figure class="stack stack-randomrot">
+					<img src="img/projects/ascension.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/ascension.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/ascension.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/ascension.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				</figure>
 			</a>
 			
 			<div class="hidden-container">
@@ -225,12 +260,17 @@ projectsMenu: true
 		<p>The game can be played up to 4 players; however, everything happens on the same keyboard. You can find a video of the gameplay <a target="_blank" href="http://www.youtube.com/watch?v=HVweItpfMuY">here</a> (the four players are played by the same person), or <a target="_blank" href="http://www.youtube.com/watch?v=f8WVxSoRD2Q">here</a> a video with four real players ('bit messy..).</p>
 		<p>Developped with Michael Fagno, Anis Benyoub &amp; Florent Weillaert. Desing by <a target="_blank" href="http://lamachinefactory.com/">Damien Reynaud</a> &amp; Delphine Rousseau. Code <a target="_blank" href="https://github.com/jonasbru/ProjetX">here</a>.</p>
 	</div>
-	<div id="NanoBlood" class="span12 backRound">
+	<div id="NanoBlood" class="span12 backRound project">
 		<h2 class="h2Projects">NanoBlood</h2><span class="badge">Java</span><span class="badge">Slick</span>
 		<div class="highslide-gallery">
 			<a id="thumb7" href="img/projects/nanoblood1.jpg" class="highslide" 
 					onclick="return hs.expand(this, config7 )">
-				<img src="img/projects/nanoblood.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				<figure class="stack stack-randomrot">
+					<img src="img/projects/nanoblood.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/nanoblood.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/nanoblood.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/nanoblood.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				</figure>
 			</a>
 			
 			<div class="hidden-container">
@@ -258,12 +298,17 @@ projectsMenu: true
 		<p>Developped with Théo Dubourg, Johan Nagy, William Burke, Bertrand Degalbert, Anthony Nemoff, P.G Chouzy. You can find the project page <a target="_blank" href="http://globalgamejam.org/2013/nanoblood">here</a>. Code <a target="_blank" href="https://github.com/jonasbru/nanoblood">here</a>.</p>
 	</div>
 	
-	<div id="DeepInTheLight" class="span12 backRound">
+	<div id="DeepInTheLight" class="span12 backRound project">
 		<h2 class="h2Projects">DeepInTheLight</h2><span class="badge">Java</span><span class="badge">Slick</span>
 		<div class="highslide-gallery">
 			<a id="thumb8" href="img/projects/DeepInTheLight1.jpg" class="highslide" 
 					onclick="return hs.expand(this, config8 )">
-				<img src="img/projects/DeepInTheLight.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				<figure class="stack stack-randomrot">
+					<img src="img/projects/DeepInTheLight.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/DeepInTheLight.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/DeepInTheLight.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					<img src="img/projects/DeepInTheLight.thumb.jpg" class="img-polaroid img-project" alt=""/>
+				</figure>
 			</a>
 			
 			<div class="hidden-container">
@@ -298,7 +343,7 @@ projectsMenu: true
 		<p>Developed with Michael Fagno, Raphaël Catolino, Kévin Le Gouguec, Stanislas Bernatt, Anthony Clerc. Code <a target="_blank" href="https://github.com/DeepInTheLight/DeepInTheLight">here</a>.</p>
 	</div>
 	
-	<div id="CofityHome" class="span12 backRound">
+	<div id="CofityHome" class="span12 backRound project">
 		<h2 class="h2Projects">Cofity Home</h2><span class="badge">Domotic</span><span class="badge">C</span><span class="badge">Flex</span><span class="badge">Bison</span><span class="badge">JSON</span>
 		<p>Domotic server highly configurable, collects information from various sensors and triggers actuators automatically according to rules written by the user. Incorporates a web server that allows the user to monitor the sensors, trigger the actuators, and change the rules of the server. Adding additional sensors and actuators is simplified to the maximum, and it is only a matter of minutes to add a new one. We used EnOcean sensors, but any bran can be used.</p>
 		<p>The user can, for example, add a rule that would, if it is past 8 am, and the ambient light exceeds a certain threshold, and all bedroom windows are closed, then turn the heat on and start the cofee machine. He can also trigger these actions from the web interface, and if the user is not at home, the web interface is adapted to the mobile phones screen too.</p>
