--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ nav: home
 <div class="span10 content">
    <img src="img/profil_small.jpg" alt="profile picture" id="profilePic" class="img-polaroid"/>
    <h2>Hi!</h2>
-   <p>I'm Jonas Bru, a <b>software engineer</b>, currently working at <a href="http://alephd.com" target="_blank">AlephD</a> as a full stack developer. Not so long ago I was studying at <a href="http://www.insa-lyon.fr/en" target="_blank"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a>, France. My friends tell me that I'm a <b>pragmatic programmer</b>. I belive that one must not look for the right job, but for the <b>right place to work</b>.</p>
+   <p>I'm Jonas Bru, a <b>software engineer</b>, currently working at <a href="http://alephd.com" target="_blank">AlephD</a> as a full stack developer. Not so long ago I was studying at <a href="http://www.insa-lyon.fr/en" target="_blank"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a>, France. My friends tell me that I'm a <b>pragmatic programmer</b>. I believe that one must not look for the right job, but for the <b>right place to work</b>.</p>
    <p>I'm quite a traveler guy, last year I did an Erasmus semester at <a href="http://www.chalmers.se/en/" target="_blank">Chalmers University</a> (Göteborg, Sweden), then an awesome internship at <a href="http://www.atlassian.com/" target="_blank">Atlassian</a>, in Amsterdam.</p>
    <p>Feel free to <a href="/contact.html">contact me</a> :)</p>
    <br/>
