pretty urls & cosmetic stuff

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ nav: home
    <h2>Hi!</h2>
    <p>I'm Jonas Bru, a <b>software engineer</b>, currently working at <a href="http://alephd.com" target="_blank">AlephD</a> as a full stack developer. Not so long ago I was studying at <a href="http://www.insa-lyon.fr/en" target="_blank"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a>, France. My friends tell me that I'm a <b>pragmatic programmer</b>. I believe that one must not look for the right job, but for the <b>right place to work</b>.</p>
    <p>I'm quite a traveler guy, last year I did an Erasmus semester at <a href="http://www.chalmers.se/en/" target="_blank">Chalmers University</a> (Göteborg, Sweden), then an awesome internship at <a href="http://www.atlassian.com/" target="_blank">Atlassian</a>, in Amsterdam.</p>
-   <p>Feel free to <a href="/contact.html">contact me</a> :)</p>
+   <p>Feel free to <a href="/contact">contact me</a> :)</p>
    <br/>
    <table class="row-fluid">
       <tr>
@@ -23,7 +23,7 @@ nav: home
                   <span class="badge badge5">Agile</span> <span class="badge badge5">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
                </div>
                <br/>
-               <a href="cv.html" class="a_no_style">
+               <a href="/cv" class="a_no_style">
                   <p style="text-align: center;">Take a look to the CV page for more!</p>
                </a>
             </div>
@@ -37,7 +37,7 @@ nav: home
                   <li><strong>Photography</strong>; take a look at my <a href="https://www.flickr.com/photos/fougerejo/" target="_blank">Flickr</a>!</li>
                   <li style="display:none"><strong>Details</strong> and hidden things ;)</li>
                </ul>
-               <a href="projects.html" class="a_no_style">
+               <a href="/projects" class="a_no_style">
                   <p style="text-align: center;">Take a look to the Projects page to know what kind of stuff I do!</p>
                </a>
             </div>
@@ -47,7 +47,7 @@ nav: home
    <div class="span12 ">
       <h4>News</h4>
       <p><strong>8 April 2014</strong> - Intro and CV updated. I work at <a href="http://alephd.com" target="_blank">AlephD</a> now :)</p>
-      <p><strong>11 October 2013</strong> - <a href="/projects.html#LibraryManager">Tiny Library Manager</a> project that I did in  Atlassian added!</p>
+      <p><strong>11 October 2013</strong> - <a href="/projects#LibraryManager">Tiny Library Manager</a> project that I did in  Atlassian added!</p>
       <p><strong>6 October 2013</strong> - The few icons are now rendered using <a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a>.</p>
       <p><strong>1 September 2013</strong> - Description of my awesome internship at <a href="https://www.atlassian.com/">Atlassian</a> added!</p>
       <p><strong>31 August 2013</strong> - The site uses now <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> to render its content.</p>
