--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ nav: home
             <div class="span6 content center">
                <h4>stuff I'm good at</h4>
                <div>
-                  <span class="badge badge5">Java</span> <span class="badge badge5">Spring Batch</span> <span class="badge badge5">C#</span> <span class="badge badge4">Android</span> <br/> 
-                  <span class="badge badge5">Python</span> <span class="badge badge4">Django</span> <span class="badge badge5">C++</span> <span class="badge badge5">Qt</span> <br/>
-                  <span class="badge badge4">Javascript</span> <span class="badge badge5">Bootstrap</span> <span class="badge badge5">jQuery</span> <br/>
+                  <span class="badge badge5">Java</span> <span class="badge badge5">Sprint Batch</span> <span class="badge badge5">C#</span> <span class="badge badge4">Android</span> <br/> 
+                  <span class="badge badge5">Python</span> <span class="badge badge5">Django</span> <span class="badge badge4">C++</span> <span class="badge badge5">Qt</span> <br/>
+                  <span class="badge badge5">Javascript</span> <span class="badge badge4">AngularJS</span> <span class="badge badge5">Bootstrap</span> <br/>
                   <span class="badge badge4">Haskell</span> <span class="badge badge3">Erlang</span> <br/>
                   <span class="badge badge5">Agile</span> <span class="badge badge5">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
                </div>
