Mea Culpa added

--- a/projects/index.html
+++ b/projects/index.html
@@ -8,6 +8,44 @@ projectsMenu: true
 	<h2>Projects</h2>
 	<p>Here are some interesting projects I've participated in these last few years. I tried, wherever possible, to put a link to the code as well as some screenshots (you can click on the images). If you want to know more about a project, please feel free to send me an email!</p>
 	<br/>
+	<div id="MeaCulpa" class="span12 backRound project">
+		<h2 class="h2Projects">Mea Culpa</h2><span class="badge">Unreal Engine</span><span class="badge">Oculus Rift</span><span class="badge">48 hours</span>
+		<div class="highslide-gallery">
+			<a id="thumb10" href="/img/projects/meaculpa1.png" class="highslide" 
+					onclick="return hs.expand(this, config10 )">
+					<figure class="stack stack-randomrot">
+						<img src="/img/projects/meaculpa.thumb.png" class="img-polaroid img-project" alt=""/>
+						<img src="/img/projects/meaculpa.thumb.png" class="img-polaroid img-project" alt=""/>
+						<img src="/img/projects/meaculpa.thumb.png" class="img-polaroid img-project" alt=""/>
+						<img src="/img/projects/meaculpa.thumb.png" class="img-polaroid img-project" alt=""/>
+					</figure>
+			</a>
+			
+			<div class="hidden-container">
+				<a href="/img/projects/meaculpa2.png" class="highslide" 
+						onclick="return hs.expand(this, config10 )">
+					<img src="/img/projects/meaculpa2.png"  alt=""/>
+				</a>
+				<a href="/img/projects/meaculpa3.png" class="highslide" 
+						onclick="return hs.expand(this, config10 )">
+					<img src="/img/projects/meaculpay3.png"  alt=""/>
+				</a>
+				<a href="/img/projects/meaculpa4.png" class="highslide" 
+						onclick="return hs.expand(this, config10 )">
+					<img src="/img/projects/meaculpa4.png"  alt=""/>
+				</a>
+				<a href="/img/projects/meaculpa5.jpg" class="highslide" 
+						onclick="return hs.expand(this, config10 )">
+					<img src="/img/projects/meaculpa5.jpg"  alt=""/>
+				</a>
+			</div>
+		</div>
+		<p>Game made during the Global Game Jam 2014 in Lyon, meant to be played with the Oculus Rift. The whole game was made from scratch during 48 uninterrupted hours. The theme of the jam was "We don't see things as they are, we see them as we are". Lots of coffee, not much sleep, but that's what's fun 'bout it!</p>
+		<p>In Mea Culpa, you're immersed in a gorgeous and zen resting environnement. In this world, at some point you'll break what shall not be broken, and by your actions you create two parallel worlds, one of light, and one of darkness. You must progress by switching between the worlds, solving simple puzzles. The game is really enjoyed with the immersive capabilities of the Oculus.</p>
+		<p>Mea Culpa quickly create interest, by the end of the 48 hours a facebook page we created for the game got over 100 likes. We got as well <a target="_blank" href="http://www.clubic.com/video/reportages/video-reportage-video-l-oculus-rift-s-invite-a-la-global-game-jam-444634.html">interviewed</a> by Clubbic during the weekend, a youtuber made <a target="_blank" href="https://www.youtube.com/watch?v=yNEWLDwef4U">an amazing review</a> for it, and  placed it on the <a target="_blank" href="https://www.youtube.com/watch?v=ShfCF-F284A">top 35 games</a> for the Oculus Rift!</p>
+		<p>Developed with Julien Cucco, Benjamin Baldassini, Jonas Herrero, Johan Nagy, Emmanuel Body-Hinrichsen, Thomas Delobre, William Burke, Pierre-Gabriel Chouzy, Fanny Renard and Bertrand De Galbert.</p>
+	</div>
+
 	<div id="LibraryManager" class="span12 backRound project">
 		<h2 class="h2Projects">Tiny Library Manager</h2><span class="badge">Python</span><span class="badge">Flask</span><span class="badge">Bootstrap</span><span class="badge">jQuery</span><span class="badge">Google Books API</span>
 		<div class="highslide-gallery">
@@ -78,7 +116,7 @@ projectsMenu: true
 		<p>Often, people who work in offices are under a lot of pressure. They need to produce fast and well, and this need generates a lots of stress. Being constantly under pressure, their mind and body becomes tired, and at the end, they work less efficiently than being rested.</p>
 		<p>Taking a break of a minute or two periodically throughout the day helps to stand up, stretch, and shake off the accumulated tension. Stepping away from the work to briefly relax and recharge will help people to be more, not less, productive. There is still a problem with that when somebody is deep immersed in his works, he doesn’t think of taking those short breaks by himself, there is the need of an exterior reminder.</p>
 		<p>Zen instants is an Android app that, randomly during the day, displays a message to the user reminding him to take a break, and to breathe a little. The messages contain a phrase or a short text, and can be accompanied with an image, video or audio file. The purpose of those messages is to force the user to take the break, by reading some text, listening to some audio or watching a short video.</p>
-		<p>Developped with Michael Fagno &amp; Manel Brull. Soon available in Google Play!</p>
+		<p>Developped with Michael Fagno &amp; Manel Brull.</p>
 	</div>
 	<div id="Bubbles" class="span12 backRound project">
 		<h2 class="h2Projects">Bubbles</h2><span class="badge">C++</span><span class="badge">Qt</span><span class="badge">Physics engine</span><span class="badge">3D</span><span class="badge">Network</span>
@@ -216,7 +254,7 @@ projectsMenu: true
 		<p>Developped with Michael Fagno. Code <a target="_blank" href="https://github.com/jonasbru/FunctionalProg">here</a>.</p>
 	</div>
 	<div id="Ascension" class="span12 backRound project">
-		<h2 class="h2Projects">Ascension</h2><span class="badge">Java</span><span class="badge">Slick</span>
+		<h2 class="h2Projects">Ascension</h2><span class="badge">Java</span><span class="badge">Slick</span><span class="badge">24h</span>
 		<div class="highslide-gallery">
 			<a id="thumb5" href="/img/projects/ascension1.jpg" class="highslide" 
 					onclick="return hs.expand(this, config5 )">
@@ -261,7 +299,7 @@ projectsMenu: true
 		<p>Developped with Michael Fagno, Anis Benyoub &amp; Florent Weillaert. Desing by <a target="_blank" href="http://lamachinefactory.com/">Damien Reynaud</a> &amp; Delphine Rousseau. Code <a target="_blank" href="https://github.com/jonasbru/ProjetX">here</a>.</p>
 	</div>
 	<div id="NanoBlood" class="span12 backRound project">
-		<h2 class="h2Projects">NanoBlood</h2><span class="badge">Java</span><span class="badge">Slick</span>
+		<h2 class="h2Projects">NanoBlood</h2><span class="badge">Java</span><span class="badge">Slick</span><span class="badge">48h</span>
 		<div class="highslide-gallery">
 			<a id="thumb7" href="/img/projects/nanoblood1.jpg" class="highslide" 
 					onclick="return hs.expand(this, config7 )">
@@ -299,7 +337,7 @@ projectsMenu: true
 	</div>
 	
 	<div id="DeepInTheLight" class="span12 backRound project">
-		<h2 class="h2Projects">DeepInTheLight</h2><span class="badge">Java</span><span class="badge">Slick</span>
+		<h2 class="h2Projects">DeepInTheLight</h2><span class="badge">Java</span><span class="badge">Slick</span><span class="badge">24h</span>
 		<div class="highslide-gallery">
 			<a id="thumb8" href="/img/projects/DeepInTheLight1.jpg" class="highslide" 
 					onclick="return hs.expand(this, config8 )">
