--- a/index.html
+++ b/index.html
@@ -46,13 +46,16 @@ nav: home
    </table>
    <div class="span12 ">
       <h4>News</h4>
-      <p><strong>1 February 2015</strong> - <a href="/projects#MeaCulpa">Mea Culpa</a> project added! Some content and graphic updates as well.</p>
-      <p><strong>8 April 2014</strong> - Intro and CV updated. I work at <a href="http://alephd.com" target="_blank">AlephD</a> now :)</p>
-      <p><strong>11 October 2013</strong> - <a href="/projects#LibraryManager">Tiny Library Manager</a> project that I did in  Atlassian added!</p>
-      <p><strong>6 October 2013</strong> - The few icons are now rendered using <a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a>.</p>
-      <p><strong>1 September 2013</strong> - Description of my awesome internship at <a href="https://www.atlassian.com/" target="_blank">Atlassian</a> added!</p>
-      <p><strong>31 August 2013</strong> - The site uses now <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> to render its content.</p>
-      <p><strong>25 April 2013</strong> - Added this news section and a link to my bitbucket profile.</p>
-      <p><strong>21 April 2013</strong> - Now I know some Python! Thanks <a href="http://codinsa.insa-lyon.fr/" target="_blank">Cod'INSA</a> :)</p>
-      <p><strong>25 February 2013</strong> - Added a project page for the Paris Taxi Flow project, you can test it <a href="http://jonasbru.github.io/TaxiManager/">here</a> (in Flash). May take some time to load, be patient.</p>
+      <div class="news-content">
+         <p><strong>30 August 2015</strong> - <a href="/projects#Axys">Axys</a> project added! Game overflow soon.</p>
+         <p><strong>1 February 2015</strong> - <a href="/projects#MeaCulpa">Mea Culpa</a> project added! Some content and graphic updates as well.</p>
+         <p><strong>8 April 2014</strong> - Intro and CV updated. I work at <a href="http://alephd.com" target="_blank">AlephD</a> now :)</p>
+         <p><strong>11 October 2013</strong> - <a href="/projects#LibraryManager">Tiny Library Manager</a> project that I did in  Atlassian added!</p>
+         <p><strong>6 October 2013</strong> - The few icons are now rendered using <a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a>.</p>
+         <p><strong>1 September 2013</strong> - Description of my awesome internship at <a href="https://www.atlassian.com/" target="_blank">Atlassian</a> added!</p>
+         <p><strong>31 August 2013</strong> - The site uses now <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> to render its content.</p>
+         <p><strong>25 April 2013</strong> - Added this news section and a link to my bitbucket profile.</p>
+         <p><strong>21 April 2013</strong> - Now I know some Python! Thanks <a href="http://codinsa.insa-lyon.fr/" target="_blank">Cod'INSA</a> :)</p>
+         <p><strong>25 February 2013</strong> - Added a project page for the Paris Taxi Flow project, you can test it <a href="http://jonasbru.github.io/TaxiManager/">here</a> (in Flash). May take some time to load, be patient.</p>
+      </div>
    </div>
