--- a/projects/index.html
+++ b/projects/index.html
@@ -46,6 +46,49 @@ projectsMenu: true
 		<p>Developed with Julien Cucco, Benjamin Baldassini, Jonas Herrero, Johan Nagy, Emmanuel Body-Hinrichsen, Thomas Delobre, William Burke, Pierre-Gabriel Chouzy, Fanny Renard and Bertrand De Galbert.</p>
 	</div>
 
+
+	<div id="Axyz" class="span12 backRound project">
+		<h2 class="h2Projects">Axyz</h2><span class="badge">Unreal Engine</span><span class="badge">38 hours</span>
+		<div class="highslide-gallery">
+			<a id="thumb11" href="/img/projects/axyz1.png" class="highslide" 
+					onclick="return hs.expand(this, config11 )">
+					<figure class="stack stack-randomrot">
+						<img src="/img/projects/axyz.thumb.png" class="img-polaroid img-project" alt=""/>
+						<img src="/img/projects/axyz.thumb.png" class="img-polaroid img-project" alt=""/>
+						<img src="/img/projects/axyz.thumb.png" class="img-polaroid img-project" alt=""/>
+						<img src="/img/projects/axyz.thumb.png" class="img-polaroid img-project" alt=""/>
+					</figure>
+			</a>
+			
+			<div class="hidden-container">
+				<a href="/img/projects/axyz2.png" class="highslide" 
+						onclick="return hs.expand(this, config11 )">
+					<img src="/img/projects/axyz2.png"  alt=""/>
+				</a>
+				<a href="/img/projects/axyz3.png" class="highslide" 
+						onclick="return hs.expand(this, config11 )">
+					<img src="/img/projects/axyz3.png"  alt=""/>
+				</a>
+				<a href="/img/projects/axyz4.png" class="highslide" 
+						onclick="return hs.expand(this, config11 )">
+					<img src="/img/projects/axyz4.png"  alt=""/>
+				</a>
+				<a href="/img/projects/axyz5.png" class="highslide" 
+						onclick="return hs.expand(this, config11 )">
+					<img src="/img/projects/axyz5.png"  alt=""/>
+				</a>
+				<a href="/img/projects/axyz6.jpg" class="highslide" 
+						onclick="return hs.expand(this, config11 )">
+					<img src="/img/projects/axyz6.jpg"  alt=""/>
+				</a>
+			</div>
+		</div>
+		<p>Another game made during a gamejam in Lyon, this time in only 38 hours. It's a first person puzzle game, where the player must use his brain in order to complete the different rooms. We tried to come up with a simple game mechanic and instead spend time with the level design, in order to produce not just a beautiful game, but a "playable" one too.</p>
+		<p>The puzzles involve controlling the gravity of "the cubes", using a special gun the player possess. Each type of cube moves along one of the three dimensional axys, the X axis, the Y, and the Z. (hence the name, axyz). The gun allows the player to inverse the gravity of those cubes, switching directions, and by that allowing to move objects and activate switches.</p>
+		<p>To see it in action, <a target="_blank" href="https://www.youtube.com/watch?v=fL12w8Hf4f4">here's a video</a>.</p>
+		<p>Developed with Alexy Long, Fanny Renard, Pierre-Gabriel Chouzy, Joris Navarro, William Burke and Julien Lafosse.</p>
+	</div>
+
 	<div id="LibraryManager" class="span12 backRound project">
 		<h2 class="h2Projects">Tiny Library Manager</h2><span class="badge">Python</span><span class="badge">Flask</span><span class="badge">Bootstrap</span><span class="badge">jQuery</span><span class="badge">Google Books API</span>
 		<div class="highslide-gallery">
