--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@ title: Jo's page
 nav: home
 ---
 <div class="span10 content">
-   <img src="img/profil_small.jpg" alt="profile picture" id="profilePic" class="img-polaroid"/>
+   <img src="img/profil_small_2.jpg" alt="profile picture" id="profilePic" class="img-polaroid"/>
    <h2>Hi!</h2>
-   <p>I'm Jonas Bru, a <b>software engineer</b>, currently working at <a href="http://alephd.com" target="_blank">AlephD</a> as a full stack developer. Not so long ago I was studying at <a href="http://www.insa-lyon.fr/en" target="_blank"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a>, France. My friends tell me that I'm a <b>pragmatic programmer</b>. I believe that one must not look for the right job, but for the <b>right place to work</b>.</p>
-   <p>I'm quite a traveler guy, last year I did an Erasmus semester at <a href="http://www.chalmers.se/en/" target="_blank">Chalmers University</a> (Göteborg, Sweden), then an awesome internship at <a href="http://www.atlassian.com/" target="_blank">Atlassian</a>, in Amsterdam.</p>
+   <p>How you doin'?</p>
+   <p>I'm Jonas Bru, <b>software engineer</b>, currently working at <a href="http://alephd.com" target="_blank">AlephD</a> as a full stack developer.</p>
    <p>Feel free to <a href="/contact">contact me</a> :)</p>
    <br/>
    <table class="row-fluid">
       <tr>
          <td>
             <div class="span6 content center">
-               <h4>stuff I'm good at</h4>
+               <h4>stuff I do</h4>
                <div>
-                  <span class="badge badge5">Java</span> <span class="badge badge5">Sprint Batch</span> <span class="badge badge5">C#</span> <span class="badge badge4">Android</span> <br/> 
-                  <span class="badge badge5">Python</span> <span class="badge badge5">Django</span> <span class="badge badge4">C++</span> <span class="badge badge5">Qt</span> <br/>
-                  <span class="badge badge5">Javascript</span> <span class="badge badge4">AngularJS</span> <span class="badge badge5">Bootstrap</span> <br/>
+                  <span class="badge badge5">Python</span> <span class="badge badge5">Javascript</span> <span class="badge badge5">Java</span> <span class="badge badge4">C#</span> <br/>
+                  <span class="badge badge5">Django</span> <span class="badge badge4">C++</span> <span class="badge badge4">Android</span> <br/>
+                  <span class="badge badge5">AngularJS</span> <span class="badge badge5">Bootstrap</span>  <span class="badge badge5">Ansible</span> <br/>
                   <span class="badge badge4">Haskell</span> <span class="badge badge3">Erlang</span> <br/>
-                  <span class="badge badge5">Agile</span> <span class="badge badge5">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
+                  <span class="badge badge5">Agile</span> <span class="badge badge5">Git</span> <span class="badge badge5">Metaheuristics</span>
                </div>
                <br/>
                <a href="/cv" class="a_no_style">
@@ -30,7 +30,6 @@ nav: home
             <div class="span6 content">
                <h4 class="center">stuff I like</h4>
                <ul>
-                  <li><strong>Traveling</strong>; mostly by train, discover new ways of thinking..</li>
                   <li><strong>Good music</strong>; in the bus, while working, etc! <a href="http://www.lastfm.fr/user/FougereJo" target="_blank">My LastFM profile</a></li>
                   <li><strong>Human contact</strong>; Well, I'm not talking about that kind of contact.. more like community involvement :)</li>
                   <li><strong>Serrano ham</strong>; I want to be buried with a box of serrano ham</li>
@@ -38,7 +37,7 @@ nav: home
                   <li style="display:none"><strong>Details</strong> and hidden things ;)</li>
                </ul>
                <a href="/projects" class="a_no_style">
-                  <p style="text-align: center;">Take a look to the Projects page to know what kind of stuff I do!</p>
+                  <p style="text-align: center;">Take a look at the Projects page to check out what I do on my free time!</p>
                </a>
             </div>
          </td>
@@ -47,6 +46,7 @@ nav: home
    <div class="span12 ">
       <h4>News</h4>
       <div class="news-content">
+         <p><strong>23 August 2017</strong> - Page updated! Been a while :)</p>
          <p><strong>30 August 2015</strong> - <a href="/projects#Axys">Axys</a> project added! Game overflow soon.</p>
          <p><strong>1 February 2015</strong> - <a href="/projects#MeaCulpa">Mea Culpa</a> project added! Some content and graphic updates as well.</p>
          <p><strong>8 April 2014</strong> - Intro and CV updated. I work at <a href="http://alephd.com" target="_blank">AlephD</a> now :)</p>
