--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ nav: home
    <img src="img/profil_small_2.jpg" alt="profile picture" id="profilePic" class="img-polaroid"/>
    <h2>Hi!</h2>
    <p>How you doin'?</p>
-   <p>I'm Jonas Bru, <b>software engineer</b>, currently working at <a href="http://alephd.com" target="_blank">AlephD</a> as a full stack developer.</p>
+   <p>I'm Jonas Bru, <b>software engineer</b>, currently working at <a href="http://partoo.fr" target="_blank">Partoo</a> as a full stack developer.</p>
    <p>Feel free to <a href="/contact">contact me</a> :)</p>
    <br/>
    <table class="row-fluid">
